fix layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
   font-family: "Kumbh Sans", sans-serif;
   background-color: #190933;
+  height: 100%;
+  
+
 }
